# dash-celery-docker-compose

./: Dockerfile  README.md  docker-compose.yml  docker_startup_script.sh  gunicorn.conf.py  pyproject.toml
.github/: dependabot.yml
src/dash_app/: __init__.py  app.py  wsgi.py
src/dash_app/pages/: home.py
