[tool.poetry]
name = "dash-celery-docker-compose"
version = "0.1.0"
description = ""
readme = "README.md"
authors = ["Roar Skinderviken <roar.skinderviken@gmail.com>"]
packages = [
    { include = "dash_app", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
dash = {extras = ["celery", "diskcache"], version = "^2.15.0"}
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
